# nn3

./: CMakeLists.txt  README.md  deps.sh  naviguesser.glade  nuscape.glade  resources.xml
icons/: Back.xcf  CMakeLists.txt  Find.xcf  Forward.xcf  Home.xcf  Images.xcf  Logo.xcf  Open.xcf  Print.xcf  Reload.xcf  Stop.xcf  nn3-barlogo.xcf
src/: main.cpp  naviguesser.cpp  naviguesser.hpp  nuscape.cpp  nuscape.hpp
